--- a/Naveen/biology.html
+++ b/Naveen/biology.html
@@ -1,7 +1,7 @@
 <html>
  <head>
    <title> open my web page to Biology </title>
-   <script src="D:\metaproject\jq.js"></script>
+   <script src="jq.js"></script>
    <script language="javascript">
     function fadetoggle()
     {
@@ -11,7 +11,7 @@
    </script>
   </head>
  <body>
-  <img src="D:\metaproject\images\biology3.jpg" style="position: fixed;right:0;bottom:0;
+  <img src="images/biology3.jpg" style="position: fixed;right:0;bottom:0;
   min-height: 100%;min-width: 100%;" onclick="fadetoggle()">
   <div  class="fadetoggle1" style="z-index: 2;position: absolute;left:630;top:30; font-size: 50px;
  color:yellow; text-decoration:underline; text-decoration-color:purple ; 
@@ -29,8 +29,8 @@ eXtended Reality (XR) experience
     ...This workshop is designed to introduce you to the world of biology using immersive VR environments where you can explore biology fundamentals at different scales. You will learn about some interesting techniques in biology and how we generate large amounts of data that requires visualization and interpretation. We will also introduce you to basic VR workflows and how you can easily create your own worlds to tell data stories. The workshop will give you the chance to explore VR worlds, learn some interesting aspects of biology and consider how you might use VR in your future projects.
   Augmented Reality is a fundamental technology that will enable a significant paradigm shift in the way consumers interact with data, and it was only recently identified as a potential solution for a variety of critical demands. Enter augmented reality (AR) technology, which can see data from hundreds of sensors concurrently, superimposing useful and actionable information on your environment via a headset. With the rapid development of 5G, augmented reality technology becomes significantly faster and more data-rich. With its ease of use and accessibility for a range of diverse purposes (other than video gaming), widespread adoption appears possible.</p>
        </div>
-  <a href="D:\metaproject\Naveen\G1.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-  <a href="D:\metaproject\index tabs\Advantages of meta verse\education.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\Naveen\biology1.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
+  <a href="Naveen/G1.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+  <a href="index tabs/Advantages of meta verse/education.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="Naveen/biology1.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
    </body> 
 </html>
