--- a/Naveen/biology1.html
+++ b/Naveen/biology1.html
@@ -1,7 +1,7 @@
 <html>
  <head>
    <title> open my web page to Biology </title>
-    <script src="D:\metaproject\jq.js"></script>
+    <script src="jq.js"></script>
    <script language="javascript">
     function fadetoggle()
     {
@@ -12,15 +12,15 @@
   </head>
  <body>
  
- <img src="D:\metaproject\images\biology4.jpg" style="position: fixed;right:0;bottom:0;
+ <img src="images/biology4.jpg" style="position: fixed;right:0;bottom:0;
   min-height: 100%;min-width: 100%;" onclick="fadetoggle()">                       
-   <div style="z-index:2 ;position: absolute;left:100;top:30;width: 1350; text-align: center; font-size: 28px; color:black;word-spacing: 14;display:none;background-image:url(D:\\metaproject\\images\\biology5bg.png" id="fadetoggle2">
+   <div style="z-index:2 ;position: absolute;left:100;top:30;width: 1350; text-align: center; font-size: 28px; color:black;word-spacing: 14;display:none;background-image:url(D://metaproject//images//biology5bg.png" id="fadetoggle2">
   <p>The Metaverse is a collectively shared virtual area that encompasses all virtual worlds including the Internet. While it may include replicas or adaptations of the real world, it is distinct from augmented reality. 
     Bioinformatics research generates enormous amounts of diverse data. This treasure trove of data contains information about metabolic mechanisms and pathways, as well as proteomics, transcriptomics, and metabolomics.  Often, these technologies give “simple” visual help for the study, like when exploring and engaging with a protein on a 3D monitor and suitable interaction hardware. Additionally, these approaches were previously limited to expensive professional visualisation facilities. With the development of new affordable and frequently transportable technology, there is a strong case for adopting comparable tactics on a daily basis for research. Visual Analytics has been effectively utilised to evaluate complicated and heterogeneous datasets for several years. Immersive Analytics is a novel technique that blends these approaches with immersive and interactive technologies. There is significant interest in the broad application of Augmented Reality (AR) and Virtual Reality (VR) in the sciences of bioinformatics and cheminformatics for the purpose of visualising complicated biological and chemical structures.
     For these reasons, virtual reality has the potential to boost abstract information visualisation, and numerous studies have demonstrated that consumers comprehend data more quickly and easily in VR environments than they do in conventional 2D and 3D desktop display.COVID-19 forced humanity to think about new ways of working globally without physically being present with other people, and eXtended Reality (XR) systems (defined as Virtual Reality, Augmented Reality and Mixed Reality) offer a potentially elegant solution. Previously seen as mainly for gaming, commercial and research institutions are investigating XR solutions to solve real world problems from training, simulation, mental health, data analysis, and studying disease progression. More recently large corporations such as Microsoft and Meta have announced they are developing the Metaverse as a new paradigm to interact with the digital world.  </p>  
   </div>
-  <a href="D:\metaproject\Naveen\biology.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
-  <a href="D:\metaproject\index tabs\Advantages of meta verse\education.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
-<a href="D:\metaproject\Naveen\physics.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
+  <a href="Naveen/biology.html"><div style="position:fixed;z-index:6;bottom:0;left:0;width:200;height:100;"></div></a>
+  <a href="index tabs/Advantages of meta verse/education.html"><div style="position:fixed;z-index:6;bottom:0;left:650;width:200;height:100;"></div></a> 
+<a href="Naveen/physics.html"> <div style="position: absolute;z-index:10;right: 0;bottom: 0;height:100;width:200;">  </div></a>
  </body>
 </html>
